# hyprfx

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  EFFECTS.md  README.md  RELEASE.md  demo.sh  hyprpm.toml  test.conf
.github/workflows/: pages.yml  pr.yml  release.yml
.skills/create-effect/: SKILL.md
.skills/install/: SKILL.md
src/: decoration.cpp  decoration.hpp  globals.hpp  main.cpp  passElement.cpp  passElement.hpp  shaderManager.cpp  shaderManager.hpp  shaders.hpp
src/effects/: EffectRegistry.cpp  EffectRegistry.hpp  FireEffect.cpp  IEffect.hpp  PixelateEffect.cpp  TVEffect.cpp
website/: index.html  package-lock.json  package.json  tailwind.config.js
website/src/: App.svelte  app.css
website/src/lib/: Config.svelte  Effects.svelte  Footer.svelte  Hero.svelte  InstallCommand.svelte  Skills.svelte  SocialLinks.svelte
